--- a/Tree Project/Tree Project/Tree Project.vcxproj.filters
+++ b/Tree Project/Tree Project/Tree Project.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="FindExactNumInPath.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="zcTreeNode.h">
